Refs #3, #4, #9, #10, #11, #12, #13, #14, #15, #16, #21, #37, #43 - Self doesn't appear on available player list - Added in URL changing for room changes without page reloading - Changed URL for images so that they refer to root, no longer relative paths which break on changing the URL to /r/ - Added HTML for names and other information on top left and bottom right for opponent and self - Added javascript variables and logic for getting both players names and information and updating them when the game begins - Fixed bug where the popup wasn't perfectly centered in the middle of the page

--- a/src/web/styles/index.scss
+++ b/src/web/styles/index.scss
@@ -1,7 +1,7 @@
 .vertical-alignment-helper {
 	display: table;
 	height: 100%;
-	width: 100%;
+	width: 98%;
 	pointer-events: none; /* This makes sure that we can still click outside of the modal to close it */
 }
 
@@ -87,4 +87,17 @@
   display: table-row;
   width: 100%;
   margins: auto;
+}
+
+.bottom-right {
+  right: 20px;
+  position: fixed;
+  bottom: 0px;
+  text-align: right;
+}
+
+.page-header {
+  padding-bottom: 9px;
+  margin: 40px 20px 20px;
+  border-bottom: 1px solid #eee;
 }
